# web/src/api/openapi.json
@@ -458,7 +458,7 @@
                   "enum": [
                     "hist",
                     "w52",
-                    "d60"
+                    "d120"
                   ],
                   "type": "string"
                 },
@@ -1910,17 +1910,12 @@
             ],
             "title": "Hist Scope"
           },
-          "history_from": {
-            "anyOf": [
-              {
-                "type": "string",
-                "format": "date"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "History From"
+          "hist_notes": {
+            "items": {
+              "type": "string"
+            },
+            "type": "array",
+            "title": "Hist Notes"
           },
           "flows": {
             "additionalProperties": {
